Implement MCP server entry point (server.ts)
Main Server (src/server.ts):
- Executable entry point (#!/usr/bin/env node)
- Initializes all components on startup:
  * Logger (with configurable LOG_LEVEL)
  * Database reader (with health check)
  * Queue writer (with orphan cleanup)
  * MCP server with stdio communication

Tool Registration:
- Registers all 14 tools with MCP framework
- Maps tool names to handler functions
- Provides tool definitions for MCP discovery

Request Handling:
- ListToolsRequest: Returns all 14 tools
- CallToolRequest: Routes to appropriate handler
- Error handling for unknown tools

Lifecycle Management:
- Startup logging
- Database connectivity check
- Queue cleanup (orphaned response files)
- Graceful shutdown on SIGINT/SIGTERM/SIGHUP
- Error handling with exit code

Package Configuration:
- Updated package.json bin entry
- Added files array (exclude source, tests, etc.)
- Proper exports for both CommonJS and ESM

Publishing Readiness:
- .npmignore created to exclude dev files
- Only compiled JavaScript shipped
- Documentation and README included
- Clean npm package ready for publication

Environment Variables:
- LOG_LEVEL: debug, info (default), warn, error
- PROMPTEKA_DB_PATH: Custom database location
- PROMPTEKA_QUEUE_PATH: Custom queue location
- NODE_ENV: Used for pretty printing logs

Version:
- 1.0.0 hardcoded in server
- Can be accessed for --version flag support

--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
     ".": "./dist/server.js"
   },
   "bin": {
-    "prompteka-mcp": "./dist/server.js"
+    "prompteka-mcp": "dist/server.js"
   },
+  "files": [
+    "dist/",
+    "README.md",
+    "LICENSE",
+    "documentation/"
+  ],
   "scripts": {
     "build": "tsc",
     "dev": "node --loader ts-node/esm --no-warnings=ExperimentalWarning src/server.ts",
