--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "documentation/"
   ],
   "scripts": {
+    "clean": "node clean.js",
     "build": "tsc",
     "dev": "node --loader ts-node/esm --no-warnings=ExperimentalWarning src/server.ts",
     "test": "vitest",
@@ -24,7 +25,6 @@
     "test:coverage": "vitest --coverage",
     "lint": "eslint src --ext .ts",
     "type-check": "tsc --noEmit",
-    "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "prepare": "npm run build"
   },
@@ -54,6 +54,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
+    "rimraf": "^5.0.0",
     "ts-node": "^10.9.0",
     "typescript": "^5.3.0",
     "vitest": "^1.0.0"
