Fix critical packaging mismatch: output path dist/ → build/
package.json was pointing to dist/ but tsconfig.json outputs to build/.
This mismatch would cause npm package to ship missing or stale artifacts.

- main: dist/server.js → build/server.js
- exports: ./dist/server.js → ./build/server.js
- bin: dist/server.js → build/server.js
- files: dist/ → build/

This matches the actual build output location and ensures correct artifacts are packaged.

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Model Context Protocol server for Prompteka - enables AI assistants to read and write prompts",
   "type": "module",
-  "main": "dist/server.js",
+  "main": "build/server.js",
   "exports": {
-    ".": "./dist/server.js"
+    ".": "./build/server.js"
   },
   "bin": {
-    "prompteka-mcp": "dist/server.js"
+    "prompteka-mcp": "build/server.js"
   },
   "files": [
-    "dist/",
+    "build/",
     "README.md",
     "LICENSE",
     "documentation/"
